// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Bodytext /> with initial props 1`] = `
.c0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 20px;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.12;
}

<Bodytext
  as="p"
  color="black"
  size="regular"
>
  <TextPrimitive
    color="black"
    element="p"
    size="regular"
    spacing="md"
    underline={false}
    variant="p"
    weight="light"
  >
    <Styled(Primitive)
      color="black"
      element="p"
      size="regular"
      spacing="md"
      underline={false}
      weight="light"
    >
      <Primitive
        className="c0"
        color="black"
        element="p"
        size="regular"
        spacing="md"
        underline={false}
        weight="light"
      >
        <p
          className="c0"
        >
          Regular size
        </p>
      </Primitive>
    </Styled(Primitive)>
  </TextPrimitive>
</Bodytext>
`;

exports[`<Bodytext /> with size prop 1`] = `
.c0 {
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin-bottom: 20px;
  text-decoration: none;
  font-size: 16px;
  line-height: 1.12;
}

<Bodytext
  as="p"
  color="black"
  size="small"
>
  <TextPrimitive
    color="black"
    element="p"
    size="small"
    spacing="md"
    underline={false}
    variant="p"
    weight="light"
  >
    <Styled(Primitive)
      color="black"
      element="p"
      size="small"
      spacing="md"
      underline={false}
      weight="light"
    >
      <Primitive
        className="c0"
        color="black"
        element="p"
        size="small"
        spacing="md"
        underline={false}
        weight="light"
      >
        <p
          className="c0"
        >
          Small size
        </p>
      </Primitive>
    </Styled(Primitive)>
  </TextPrimitive>
</Bodytext>
`;
